[package]
name = "voice-converter"
version = "0.1.0"
authors = ["tdgne <tg.wd.29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cpal = "0.11.0"
rustfft = "3.0.1"
clap = "3.0.0-beta.1"
getset = "0.1.1"
derive-new = "0.5"
imgui = "^0.3"
glium = { version = "0.26", default-features = true }
imgui-glium-renderer = "^0.3"
imgui-winit-support = "^0.3"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_18"]

[dependencies.gio]
version = "0.8.1"

